fix alignment of table header checkboxes

--- a/src/maasserver/static/scss/_base_forms.scss
+++ b/src/maasserver/static/scss/_base_forms.scss
@@ -70,3 +70,19 @@
     margin-right: 0.5rem;
   }
 }
+
+$box-offset-top--smallest-text: -0.15rem;
+
+%checkbox--smallest-text {
+  &::before {
+    top: $box-offset-top--smallest-text;
+  }
+
+  &::after {
+    top: #{$box-offset-top--smallest-text + 0.1875rem};
+  }
+}
+
+table th input[type="checkbox"] + label {
+  @extend %checkbox--smallest-text;
+}
